# python-developer-task

./: .flake8  .gitignore  README.md  pyproject.toml
src/: file_reader.py  main.py  models.py
src/reports/: __init__.py  average_rating_report.py  base_report.py
tests/: conftest.py  test_average_rating_report.py  test_file_reader.py  test_main.py
